force-app/main/default/objects/leankor__Module__c/leankor__Module__c.object-meta.xml
<CustomObject>
    <description>Leankor product modules.</description>
    <label>Module</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>