force-app/main/default/objects/leankor__Module__c/fields/leankor__BoardType__c.field-meta.xml
<CustomField>
    <fullName>leankor__BoardType__c</fullName>
    <inlineHelpText>Select the board type.</inlineHelpText>
    <label>Board Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>_System_PlanBoard</fullName>
            </value>
            <value>
                <fullName>_System_DashBoard</fullName>
            </value>
            <value>
                <fullName>_System_Board</fullName>
            </value>
            <value>
                <fullName>_System_UberBoard</fullName>
            </value>
            <value>
                <fullName>_System_Whiteboard</fullName>
            </value>
            <value>
                <fullName>_System_ExpenseBoard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>