force-app/main/default/objects/leankor__Module__c/fields/leankor__Order__c.field-meta.xml
<CustomField>
    <fullName>leankor__Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>