force-app/main/default/objects/leankor__Module__c/fields/leankor__SetUp__c.field-meta.xml
<CustomField>
    <fullName>leankor__SetUp__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true then the system automatically creates or configures this module when creating a new project.</description>
    <label>Set Up</label>
    <type>Checkbox</type>
</CustomField>